--- a/jupyter/Gleitende Durchschnitte.ipynb
+++ b/jupyter/Gleitende Durchschnitte.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "Der gleitende Durchschnitt errechnet sich ähnlich wie der normale Mittelwert:\n",
     "\n",
-    "$${{\\frac {1}{n}}\\sum _{i=1}^{n}{x_{i}}={\\frac {x_{1}+x_{2}+\\cdots +x_{n}}{n}}}$$\n",
+    "$${\\frac {1}{n}}\\sum _{i=1}^{n}{x_{i}}={\\frac {x_{1}+x_{2}+\\cdots +x_{n}}{n}}$$\n",
     "\n",
     "$$oder$$\n",
     "\n",
